--- a/.github/workflows/React-CI.yml
+++ b/.github/workflows/React-CI.yml
@@ -7,20 +7,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
-    steps:
-    - uses: actions/checkout@v2
     
-    - name: Node V-${{ matrix.node-version }} Test
-      uses: actions/setup-node@v1
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Node Setting
+      uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
+
+    - name: Cache
+      uses: actions/cache@v4
+      id: dep-cache
+      with:
+        path: node_modules
+        key: ${{ runner.OS }}-npm-${{ hashFiles('**/package-lock.json') }}
     
     - name: Install dependencies
+      if: steps.dep-cache.outputs.cache-hit != 'true'
       run: npm install
       
     - name: App Test
