--- a/.github/workflows/React-CD.yml
+++ b/.github/workflows/React-CD.yml
@@ -34,7 +34,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_WRITER_PW }}
       run: |
         aws s3 sync \
-          --recursive
+          --recursive \
           --region ap-northeast-2 \
           build s3://react.ymon.io \
           --delete
