--- a/.github/workflows/React-CD.yml
+++ b/.github/workflows/React-CD.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: App Deploy
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.S3_WRITER }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_WRITER_PW }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
       run: |
         aws s3 sync \
           --region ap-northeast-2 \
